Fix color & contrast

--- a/dashboard-refactor/css/styles.css
+++ b/dashboard-refactor/css/styles.css
@@ -138,3 +138,12 @@ main {
     border: 1px solid white;
 }
 
+/* Fixes */
+
+body {
+    background: #303A52;
+}
+
+nav {
+    background: #2C354A;
+}
